added /auction list to syntax message

--- a/resources/english.yml
+++ b/resources/english.yml
@@ -27,6 +27,7 @@ Syntax:
     - "/auction end"
     - "/auction info"
     - "/auction ignore"
+    - "/auction list"
     auctionStart: "/auction start <startbid> [quantity] [time]"
     auctionBid: "/auction bid <bid>"
   
