Bane of Anthropods enchantment should now display properly

--- a/resources/english.yml
+++ b/resources/english.yml
@@ -140,4 +140,6 @@ Enchantment:
   PROTECTION_PROJECTILE: "Projectile Protection"
   SILK_TOUCH: "Silk Touch"
   WATER_WORKER: "Aqua Affinity"
+  DAMAGE_ANTHROPODS: "Bane of Anthropods"
+
   
