--- a/resources/french.yml
+++ b/resources/french.yml
@@ -141,4 +141,5 @@ Enchantment:
   PROTECTION_PROJECTILE: "Protection de projectile"
   SILK_TOUCH: "Toucher de soie"
   WATER_WORKER: "Aqua affinité"
+  DAMAGE_ANTHROPODS: "Bane of Anthropods"
   
