--- a/resources/portuguese.yml
+++ b/resources/portuguese.yml
@@ -140,4 +140,5 @@ Enchantment:
   PROTECTION_PROJECTILE: "Projectile Protection"
   SILK_TOUCH: "Silk Touch"
   WATER_WORKER: "Aqua Affinity"
+  DAMAGE_ANTHROPODS: "Bane of Anthropods"
   
