--- a/resources/portuguese.yml
+++ b/resources/portuguese.yml
@@ -124,7 +124,7 @@ Enchantment:
   ARROW_INFINITE: "Infinity"
   ARROW_KNOCKBACK: "Knockback"
   DAMAGE_ALL: "Sharpness"
-  DAMAGE_ANTHROPODS: "Bane of Anthropods"
+  DAMAGE_ARTHROPODS: "Bane of Arthropods"
   DAMAGE_UNDEAD: "Smite"
   DIG_SPEED: "Efficiency"
   DURABILITY: "Unbreaking"
