--- a/resources/french.yml
+++ b/resources/french.yml
@@ -83,6 +83,8 @@ Auction:
   
   startInfo:
   - "&3%owner%&f a mis &a%quantity% %item%&f jusqu'à pour aux enchères."
+  - "&aRenamed to:&a '%displayname%'"
+  - "&aTitle:&f '%booktitle%' by %bookauthor%"
   - "&aDurabilité: &6%durability%"
   - "%enchantinfo%"
   - "&aEnchère de départ: &2$%bid%"
@@ -92,6 +94,8 @@ Auction:
   
   info:
   - "&aPoint: %quantity% %item%"
+  - "&aRenamed to:&a '%displayname%'"
+  - "&aTitle:&f '%booktitle%' by %bookauthor%"
   - "&aDurabilité: &6%durability%"
   - "%enchantinfo%"
   - "&aPropriétaire: &3%owner%"
