--- a/resources/config.yml
+++ b/resources/config.yml
@@ -8,7 +8,7 @@ Main:
 Auction:
   enabled: true
   allowCreative: false
-  displayRenamed: true
+  displayRenamed: false
   cooldown: 60
   minStart: 100
   maxStart: 100000
