Added locale message for THORNS enchantment.

--- a/resources/french.yml
+++ b/resources/french.yml
@@ -146,4 +146,5 @@ Enchantment:
   SILK_TOUCH: "Toucher de soie"
   WATER_WORKER: "Aqua affinité"
   DAMAGE_ANTHROPODS: "Bane of Anthropods"
+  THORNS: "Thorns"
   
