--- a/resources/portuguese.yml
+++ b/resources/portuguese.yml
@@ -145,4 +145,5 @@ Enchantment:
   SILK_TOUCH: "Silk Touch"
   WATER_WORKER: "Aqua Affinity"
   DAMAGE_ANTHROPODS: "Bane of Anthropods"
+  THORNS: "Thorns"
   
