--- a/resources/english.yml
+++ b/resources/english.yml
@@ -144,5 +144,6 @@ Enchantment:
   PROTECTION_PROJECTILE: "Projectile Protection"
   SILK_TOUCH: "Silk Touch"
   WATER_WORKER: "Aqua Affinity"
+  THORNS: "Thorns"
 
   
